--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,8 @@ Django>=4.2,<5.0
 djangorestframework>=3.14,<4.0
 gunicorn>=20.1,<21.0
 djangorestframework-simplejwt>=5.0.0
+# drf-yasg==1.21.7
+drf-yasg>=1.20.0
+# drf-spectacular==0.23.1
 
 
