--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.8.1
-Django==4.2.15
-djangorestframework==3.15.2
+# Django==4.2.15
+Django==4.0
+# djangorestframework==3.15.2
+# djangorestframework==3.12.4
+djangorestframework==3.13.1
 djangorestframework-simplejwt==5.3.1
 # drf-yasg==1.21.7
-drf-yasg>=1.20.0
+# drf-yasg>=1.20.0
 gunicorn==20.1.0
 inflection==0.5.1
 packaging==24.1
@@ -12,4 +15,4 @@ pytz==2024.1
 PyYAML==6.0.2
 sqlparse==0.5.1
 uritemplate==4.1.1
-# drf-spectacular==0.23.1
+drf-spectacular==0.23.1
